--- a/index.html
+++ b/index.html
@@ -4,14 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML Demo</title>
+    <link href="css/main.css" />
     <link href="partials/dragndrop.html" rel="import" />
 </head>
 
 <body>
     <h1>Demo</h1>
     <a href="/partials/dragndrop.html">Drag n Drop</a>
-
+    <a href="/partials/notifications.html">Notifications</a>
+    <ul>
+        <li>partial include</li>
+    </ul>
 </body>
 
 </html>
