--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>Demo</h1>
+    <h2>HTML Demo</h2>
     <a href="/partials/dragndrop.html">Drag n Drop</a>
     <a href="/partials/notifications.html">Notifications</a>
     <ul>
