--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Demo</title>
+    <base href="/htmldemo" />
     <link rel="icon" href="favicon.ico">
     <link href="css/main.css" />
     <link href="partials/dragndrop.html" rel="import" />
