--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Demo</title>
-    <base href="/htmldemo" />
+    <base href="/htmldemo/" />
     <link rel="icon" href="favicon.ico">
     <link href="css/main.css" />
     <link href="partials/dragndrop.html" rel="import" />
@@ -13,8 +13,8 @@
 
 <body>
     <h2>HTML Demo</h2>
-    <a href="/partials/dragndrop.html">Drag n Drop</a>
-    <a href="/partials/notifications.html">Notifications</a>
+    <a href="./partials/dragndrop.html">Drag n Drop</a>
+    <a href="./partials/notifications.html">Notifications</a>
     <ul>
         <li>partial include</li>
     </ul>
